--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_launcher_icons: ^0.11.0
   lottie: ^2.3.0
+  preload_page_view: ^0.1.6
 
 flutter_icons:
   android: true
@@ -79,6 +80,8 @@ flutter:
     - C:/Users/moski/Downloads/app/flutter_app/pic/Group 36717.png
     - C:/Users/moski/Downloads/app/flutter_app/pic/Group 36722.png
     - C:/Users/moski/Downloads/app/flutter_app/pic/1stbanner.png
+    - C:/Users/moski/Downloads/app/flutter_app/pic/splash_screen.json
+    - C:/Users/moski/Downloads/app/flutter_app/pic/Trinity_text.png
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
