--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   flutter_launcher_icons: ^0.11.0
   lottie: ^2.3.0
   preload_page_view: ^0.1.6
+  image: ^3.3.0
 
 flutter_icons:
   android: true
@@ -82,6 +83,7 @@ flutter:
     - C:/Users/moski/Downloads/app/flutter_app/pic/1stbanner.png
     - C:/Users/moski/Downloads/app/flutter_app/pic/splash_screen.json
     - C:/Users/moski/Downloads/app/flutter_app/pic/Trinity_text.png
+    - C:/Users/moski/Downloads/app/flutter_app/pic/bkname.png
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
