--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   lottie: ^2.3.0
   preload_page_view: ^0.1.6
   image: ^3.3.0
+  camera: ^0.10.3+2
 
 flutter_icons:
   android: true
@@ -84,6 +85,15 @@ flutter:
     - C:/Users/moski/Downloads/app/flutter_app/pic/splash_screen.json
     - C:/Users/moski/Downloads/app/flutter_app/pic/Trinity_text.png
     - C:/Users/moski/Downloads/app/flutter_app/pic/bkname.png
+    - C:/Users/moski/Downloads/app/flutter_app/pic/homebk.png
+    - C:/Users/moski/Downloads/app/flutter_app/pic/small trinity.png
+    - C:/Users/moski/Downloads/app/flutter_app/pic/Tri_text.png
+    - C:/Users/moski/Downloads/app/flutter_app/pic/navigator.png
+    - C:/Users/moski/Downloads/app/flutter_app/pic/demo_pic.png
+    - C:/Users/moski/Downloads/app/flutter_app/pic/home_icon.png
+    - C:/Users/moski/Downloads/app/flutter_app/pic/pictute_icon.png
+    - C:/Users/moski/Downloads/app/flutter_app/pic/global_icon.png
+    - C:/Users/moski/Downloads/app/flutter_app/pic/tri_card.png
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
