--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -94,6 +94,10 @@ flutter:
     - C:/Users/moski/Downloads/app/flutter_app/pic/pictute_icon.png
     - C:/Users/moski/Downloads/app/flutter_app/pic/global_icon.png
     - C:/Users/moski/Downloads/app/flutter_app/pic/tri_card.png
+    - C:/Users/moski/Downloads/app/flutter_app/pic/camera_icon.png
+    - C:/Users/moski/Downloads/app/flutter_app/pic/image 297.png
+    - C:/Users/moski/Downloads/app/flutter_app/pic/funfueng.png
+    - C:/Users/moski/Downloads/app/flutter_app/pic/human.png
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
@@ -122,6 +126,12 @@ flutter:
         - asset: fonts/SourceSansPro-Regular.ttf
         - asset: fonts/SourceSansPro-Bold.ttf
           weight: 700
+    - family: SFpro
+      fonts:
+        - asset: fonts/SFPRODISPLAYREGULAR.otf
+        - asset: fonts/SFPRODISPLAYBOLD.otf
+          weight: 700
+
         # - asset: fonts/Schyler-Italic.ttf
         # style: italic
   #   - family: Trajan Pro
