--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -98,6 +98,10 @@ flutter:
     - C:/Users/moski/Downloads/app/flutter_app/pic/image 297.png
     - C:/Users/moski/Downloads/app/flutter_app/pic/funfueng.png
     - C:/Users/moski/Downloads/app/flutter_app/pic/human.png
+    - C:/Users/moski/Downloads/app/flutter_app/pic/apex.png
+    - C:/Users/moski/Downloads/app/flutter_app/pic/cmkl.png
+    - C:/Users/moski/Downloads/app/flutter_app/pic/bk.png
+    - C:/Users/moski/Downloads/app/flutter_app/pic/triversion.png
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
