--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   preload_page_view: ^0.1.6
   image: ^3.3.0
   camera: ^0.10.3+2
+  path_provider: ^2.0.14
+  shared_preferences: ^2.1.0
 
 flutter_icons:
   android: true
@@ -102,6 +104,8 @@ flutter:
     - C:/Users/moski/Downloads/app/flutter_app/pic/cmkl.png
     - C:/Users/moski/Downloads/app/flutter_app/pic/bk.png
     - C:/Users/moski/Downloads/app/flutter_app/pic/triversion.png
+    - C:/Users/moski/Downloads/app/flutter_app/pic/Gallery_pic.png
+    - C:/Users/moski/Downloads/app/flutter_app/pic/Gallery_P.png
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
