--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,9 +38,17 @@ dependencies:
   lottie: ^2.3.0
   preload_page_view: ^0.1.6
   image: ^3.3.0
-  camera: ^0.10.3+2
+  camera: ^0.8.1+3
   path_provider: ^2.0.14
   shared_preferences: ^2.1.0
+  image_picker: ^0.8.7+3
+  tflite_flutter: ^0.9.0
+  tflite_flutter_helper:
+    git:
+      url: https://github.com/filofan1/tflite_flutter_helper.git
+      ref: 783f15e5a87126159147d8ea30b98eea9207ac70
+  firebase_core: ^2.10.0
+  firebase_storage: ^11.1.1
 
 flutter_icons:
   android: true
@@ -106,6 +114,9 @@ flutter:
     - C:/Users/moski/Downloads/app/flutter_app/pic/triversion.png
     - C:/Users/moski/Downloads/app/flutter_app/pic/Gallery_pic.png
     - C:/Users/moski/Downloads/app/flutter_app/pic/Gallery_P.png
+    - assets/
+    - C:/Users/moski/Downloads/app/flutter_app/pic/Tri_ai.png
+    - pic/
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
@@ -132,11 +143,15 @@ flutter:
     - family: SourceSansPro
       fonts:
         - asset: fonts/SourceSansPro-Regular.ttf
+        - asset: fonts/SourceSansPro-SemiBold.ttf
+          weight: 600
         - asset: fonts/SourceSansPro-Bold.ttf
           weight: 700
     - family: SFpro
       fonts:
         - asset: fonts/SFPRODISPLAYREGULAR.otf
+        - asset: fonts/SFPRODISPLAYMEDIUM.otf
+          weight: 600
         - asset: fonts/SFPRODISPLAYBOLD.otf
           weight: 700
 
