--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,7 +38,6 @@ dependencies:
   lottie: ^2.3.0
   preload_page_view: ^0.1.6
   image: ^3.3.0
-  camera: ^0.8.1+3
   path_provider: ^2.0.14
   shared_preferences: ^2.1.0
   image_picker: ^0.8.7+3
@@ -51,6 +50,8 @@ dependencies:
   firebase_storage: ^11.1.1
   cloud_firestore: ^4.5.2
   provider: ^6.0.5
+dependency_overrides:
+  camera: ^0.10.4
 
 flutter_icons:
   android: true
